# quant-stack-video

./: .gitignore  .tools.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
configs/: default.yaml
docs/: benchmark_gguf_vs_bnb.md  research-gemini-layered-infinite-video.md
docs/architecture/: ARCHITECTURE.md
docs/planning/: BACKLOG.md  EXECUTION_PLAN.md
docs/product/: GLOSSARY.md  PRD.md
docs/state/: CHANGELOG.md  DECISIONS.md  HANDOFF.md  KICKOFF.md  OPEN_QUESTIONS.md  RISKS.md  STATUS.md
scripts/: benchmark_1pass_vs_3pass.py  benchmark_gguf_vs_bnb.py  benchmark_long_video.py  generate.py  generate_ltx.py  model_benchmark.py  overnight_apollo11.py  qsv-supervise.sh  reeval_clip.py  run_first_ltx.py  start_agent.sh  start_gen_session.sh
src/agent/: server.py  video_quality.py
src/benchmark/: __init__.py  long_video_runner.py  metrics.py  runner.py
src/billing/: store.py  stripe_client.py
src/llm/: __init__.py  director.py  prompt_bandit.py
src/quant/: __init__.py  config.py  engine.py
src/rgba/: __init__.py  compositor.py
src/svi/: __init__.py  recycler.py
src/vace/: __init__.py  extension.py
src/wan/: __init__.py  generate.py  ltx_pipeline_factory.py  pipeline_factory.py
tests/: test_agent_server.py  test_billing.py  test_director_bandit.py  test_engine_embed_cache.py  test_generate_ltx.py  test_infinite_chaining.py  test_ltx_pipeline_factory.py  test_prompt_bandit.py  test_quant_config.py  test_server_v2.py  test_unity_shims.py  test_v2_components.py  test_vace_svi.py  test_video_quality.py  test_wan_pipeline_factory.py
